--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/AnastasiaYazvinskaya/cse-341-project1/issues"
   },
-  "homepage": "https://github.com/AnastasiaYazvinskaya/cse-341-project1#readme"
+  "homepage": "https://github.com/AnastasiaYazvinskaya/cse-341-project1#readme",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongodb": "^6.9.0"
+  }
 }
